<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llDrawer"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/drawer_background_color"
    android:orientation="vertical"
    android:paddingLeft="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:text="@string/menu"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/store"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAlarm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/alarm"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLullaby"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/sleep_sound"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/llSleepPattern"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/sleeing_pattern"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDevice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/device"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMyAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="#fff"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/my_account"/>

    </LinearLayout>


</LinearLayout>