<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_background_gradient"
    tools:context="themollo.app.mollo.survey.survey_fragment.Survey_p1">

    <ImageView
        android:layout_marginTop="39.5dp"
        android:layout_marginLeft="20dp"
        android:layout_width="12.7dp"
        android:layout_height="20.5dp"
        android:src="@mipmap/icn_back"/>

    <ImageView
        android:layout_width="320dp"
        android:layout_height="265dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/backgraound_copy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87.5dp"
        android:letterSpacing="0"
        android:text="@string/survey_1_text"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold" />

    
    <LinearLayout
        android:layout_width="274.5dp"
        android:layout_height="53.5dp"
        android:background="@drawable/input_box"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="123dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/survey_button_left_round"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/survey_text_color"
                android:textSize="21sp" />

        </LinearLayout>

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/survey_border_color"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/survey_button_right_round"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/survey_text_color"
                android:textSize="21sp" />

        </LinearLayout>


    </LinearLayout>



    <TextView
        android:layout_width="190dp"
        android:layout_height="51.5dp" />


</RelativeLayout>
