<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dlHomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drawerBackground"
    tools:context=".home.HomeActivity">

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appColor"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rvHomeContent"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <LinearLayout
                android:id="@+id/llHomeMenu"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/ivDrawerArrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="25dp"
                    android:background="@drawable/drawer_selector" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="#fff"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/llSettings"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="25dp"
                    android:src="@drawable/home_settings" />
            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/tvCurrentTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="20:00"
                            android:textColor="#fff"
                            android:textSize="50dp" />

                        <TextView
                            android:id="@+id/tvAlarmTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvCurrentTime"
                            android:layout_centerInParent="true"
                            android:text="ALARM 23:00 ~ 07:00"
                            android:textColor="#fff"
                            android:textSize="12dp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvAlarmButton"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/home_button"
                            android:textColor="#fff"
                            android:textSize="18dp"
                            android:gravity="center"
                            android:layout_above="@id/tvLullabyButton"
                            android:text="@string/alarm"/>


                        <TextView
                            android:id="@+id/tvLullabyButton"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/home_button"
                            android:textColor="#fff"
                            android:textSize="18dp"
                            android:gravity="center"
                            android:layout_margin="20dp"
                            android:text="@string/lullaby"/>

                        <TextView
                            android:id="@+id/tvDiffuserButton"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/home_button"
                            android:textColor="#fff"
                            android:textSize="18dp"
                            android:gravity="center"
                            android:layout_below="@id/tvLullabyButton"
                            android:text="@string/diffuser"/>


                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llDrawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawerBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="140dp"
            android:background="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="STORE"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="ALARM"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLullaby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="LULLABY"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="DEVICE"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSleepDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="ANALYTICS"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="MY ACCOUNT"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
